[build-system]
# Specifies the tools needed to build your package
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
  {name = "owatanab"},
  {email = "owatanab@42.fr"},
]
license = "MIT"

[project.urls]
Homepage = "https://example.com"
